# RoastedOctocats

./: README.md  RoastedOctocats.sln
api/: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  TESTING.md
api/proto/: api.proto
api/src/private/server/: api.cpp
api/src/private/server/grpc/: server.cpp  server.h
api_v2/: .gitignore  Dockerfile  Dockerfile.envoy  Dockerfile.integ  README.md  docker-compose.yml  go.mod  go.sum
api_v2/cmd/grpc_api/: main.go
api_v2/configs/envoy/: envoy.yaml  envoy_acs.yaml
api_v2/internal/api/: api.go  oauth.go  parsegithub.go
api_v2/internal/config/: config_reader.go  config_reader_test.go  model_instructions.go
api_v2/internal/db/: db.go
api_v2/internal/github/: client.go  client_test.go
api_v2/pkg/api/: constants.go
api_v2/pkg/iconfig/: config.go
api_v2/pkg/idb/: db.go  types.go
api_v2/pkg/igithub/: iclient.go  istructs.go
api_v2/pkg/proto/: roasted_octocat.pb.go  roasted_octocat_grpc.pb.go
api_v2/proto/: roasted_octocat.proto
api_v2/scripts/: integ_test_docker.sh
api_v2/test/integration/: db_test.go  parsegithub_test.go  ping_test.go  test_util.go  whoami_test.go
infra/: README.md  deploy.ps1  main.bicep
infra/resources/: container_app.bicep  frontend_app.bicep  octocat_app_resource.bicep
web/: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  web.esproj
web/src/: App.tsx  index.css  main.tsx
web/src/components/: GatedHealthCheck.tsx  GithubAuth.tsx  GithubLoginBtn.tsx  PageLayout.tsx
web/src/hooks/: useGithubAuth.ts  useGrpcClient.ts
web/src/pages/: GithubRoaster.tsx  GithubRoasterResult.tsx  HealthCheck.tsx
web/src/proto/: roasted_octocat.client.ts  roasted_octocat.ts
